--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev-live-reload": "cross-env DEBUG=server,auto-wire,auto-wire-warning,auto-data nodemon --ignore 'data/' -r esm bin/server.js",
-    "dev-static": "cross-env DEBUG=server,auto-wire,auto-wire-warning,auto-data node -r esm bin/server.js",
-    "prod": "cross-env DEBUG=server node -r esm bin/server.js"
+    "dev-live-reload": "PORT=3001 cross-env DEBUG=server,auto-wire,auto-wire-warning,auto-data nodemon --ignore 'data/' -r esm bin/server.js",
+    "dev-static": "PORT=3001 cross-env DEBUG=server,auto-wire,auto-wire-warning,auto-data node -r esm bin/server.js",
+    "prod": "PORT=3001 cross-env DEBUG=server node -r esm bin/server.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
