--- a/devetry/package.json
+++ b/devetry/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bulma": "^0.8.0",
+    "clipboard-copy": "^3.1.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
